import { snapshotTest } from 'testing';

describe('Loading demo snapshot', () => {
  snapshotTest('Loading');
});
